<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.me.MeFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="505dp"
            android:background="#4D9BBF"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,UselessParent">

            <ImageView
                android:id="@+id/House"
                android:layout_width="60dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/esb" />

            <ImageView
                android:id="@+id/Cloud"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/taiyi_cloud_01" />

            <ImageView
                android:id="@+id/Cloud1"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_marginStart="220dp"
                android:layout_marginTop="100dp"
                android:rotation="180"
                android:rotationX="20"
                android:rotationY="20"
                android:scaleType="centerCrop"
                android:src="@drawable/taiyi_cloud_01" />


            <ImageView
                android:id="@+id/Background_Sky"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/earth_ground" />

            <ImageView
                android:id="@+id/user"
                android:layout_width="60dp"
                android:layout_height="140dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="350dp"
                android:rotationX="10"
                android:scaleType="centerCrop"
                android:src="@drawable/man" />


            <TextView
                android:id="@+id/CpValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="50sp"
                android:gravity="center"
                android:shadowColor="#376E70"
                android:shadowRadius="5"
                android:text="@string/cp_Value"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BuildButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="125dp"
                android:backgroundTint="#FE5F55"
                android:text="@string/build"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ShopButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                android:backgroundTint="#577399"
                android:text="Shop"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FAFAFA"
                android:drawableStart="@drawable/ic_baseline_assignment_ind_24"
                android:drawablePadding="10dp"
                android:text="@string/user_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:drawableStart="@drawable/ic_baseline_contact_phone_num"
                    android:drawablePadding="10dp"
                    android:text="+1-144587241" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/university">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:drawableStart="@drawable/ic_baseline_bookmarks_24"
                    android:drawablePadding="10dp"
                    android:text="UCL" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:hint="@string/professional_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:drawableStart="@drawable/ic_baseline_biotech_24"
                    android:drawablePadding="20dp"
                    android:text="IT" />

            </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="~~End~~"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="-80dp">
                </TextView>

        </LinearLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>